# moneychart

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  teste.py
dados/carteiras/: carteiras.xlsx
dados/cotacoes/acoes/: acoes.csv  acoes_2017.csv  acoes_2018.csv  acoes_2019.csv  acoes_2020.csv  acoes_2021.csv
data/assets/: assets.csv
dataviz/power-bi/: Investing Go.pbit  preferences.json
scripts/: Dockerfile  config.json  cotacoes.py  de_para_tesouro.csv  parametros.json  requirements.txt
scripts/ativos/: ativos.py
scripts/cotacoes/: acoes.py  cotacoes.py  tesouro.py
setup/: Dockerfile  national_treasury.csv  requirements.txt  settings.json
src/moneychart/: assets.py
src/utils/: classify.py  read_config.py
